--- a/demo.css
+++ b/demo.css
@@ -1,3 +1,15 @@
+body {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: large;
+}
+
+h2 {
+	font-size: 1.1em;
+	font-style: italic;
+	font-weight: normal;
+	color: red;
+}
+
 label {
 	display: block;
 	margin: 1em 0;
@@ -20,6 +32,10 @@ em {
 	background-color: ivory;
 }
 
+.result:empty {
+	display: none;
+}
+
 .status {
 	min-height: 1em;
 }
@@ -35,4 +51,13 @@ em {
 	padding: .5em;
 	margin: 0 .5em;
 	overflow: hidden;
+}
+
+nav {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	padding: 1em;
+	background-color: beige;
+	text-align: center;
 }
